# mdm

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  FINAL_TEST_REPORT.md  ISSUES.md  LICENSE  MDM_Architecture_Analysis_Report.md  MDM_TEST_FAILURE_ANALYSIS_REPORT.md  MDM_TEST_FIXES_FINAL_SUMMARY.md  README.md  SCALABILITY_BOTTLENECKS_ANALYSIS.md  SOLID_VIOLATIONS_ANALYSIS.md  install_deps_refactor.sh  package-lock.json  pyproject.toml  step3_summary.md  test_config_migration.py  test_integration_quick.py  test_metrics_fix.py  test_progress.md  test_real_migration.py  test_refactor.sh  test_storage_simple.py  test_ts_debug.py  verification.txt  verification_info.txt  verification_search.txt  verification_search_no_results.txt  verification_search_results.txt  verification_stats.txt
analysis_results/: storage_backend_api.json  storage_backend_api_report.md
benchmark_results/: benchmark_results_20250712_190158.json  benchmark_results_20250712_190251.json  benchmark_results_20250712_190527.json  benchmark_results_20250712_190536.json  benchmark_results_20250712_190655.json  benchmark_results_20250712_190845.json  benchmark_results_20250712_190932.json  benchmark_results_20250712_191209.json  benchmark_results_20250712_194253.json  benchmark_results_20250712_194454.json  benchmark_results_20250713_140656.json  benchmark_results_20250713_142936.json
docs/: 00_Table_of_Contents.md  01_Overview.md  02_Configuration.md  02_Installation.md  03_Quick_Start.md  04_CLI_Reference.md  05_Python_API.md  06_Database_Backends.md  06_Storage_Backends.md  08_Programmatic_API.md  09_Advanced_Features.md  09_Performance.md  11_Troubleshooting.md  12_FAQ.md  12_Summary.md  13_Testing_and_Validation.md  API_Reference.md  CHANGELOG.md  CLI_Migration_Summary.md  CONFIGURATION_UPDATE_SUMMARY.md  Configuration_Migration_Summary.md  Contributing.md  DOCUMENTATION_REORGANIZATION_SUMMARY.md  DOCUMENTATION_UPDATE_PLAN.md  DOCUMENTATION_UPDATE_SUMMARY.md  Feature_Engineering_Migration_Summary.md  Integration_Testing_Summary.md  MANUAL_TEST_CHECKLIST.md  PROGRAMMATIC_API_UPDATE_SUMMARY.md  Performance_Optimization_Summary.md  RELEASE_NOTES_UPDATE_IMPROVEMENTS.md  Rollout_Summary.md  TROUBLESHOOTING_MERGE_SUMMARY.md  Troubleshooting_Guide.md  reorganize_documentation.sh  review-quality-20250711_2.md
docs-new/: 02_Installation.md  07_Feature_Engineering.md  08_Configuration.md  10_ML_Integration.md  11_Troubleshooting.md  12_FAQ.md  CHANGELOG.md  README.md  diagrams.md
examples/: cli_migration_example.py  config_migration_example.py  dataset_migration_example.py  dependency_injection_example.py  feature_migration_example.py  integration_tests_example.py  parallel_development_example.py  performance_optimization_example.py  storage_migration_example.py
scripts/: check_test_imports.py  final_migration.py  monitor_parallel.sh  post_deployment_validation.py  production_readiness.py  run_integration_tests.py  run_tests.sh  test_e2e_demo.sh  test_e2e_nocolor.sh  test_e2e_quick.sh  test_e2e_safe.sh  test_e2e_simple.sh  test_feature_performance.py  test_individual_features.py
src/mdm/: api.py  (+2 more)
submissions/: simple_benchmark_submission_20250713_131211.csv
tests/: README.md  README_TEST_INFRASTRUCTURE.md  USAGE_EXAMPLES.md  analyze_cli_failures_github.py  analyze_test_failures.py  check_mdm_installation.py  conftest.py  debug_test_environment.py  run_all_tests_simple.py  run_all_tests_with_github.sh  run_e2e_tests.py  run_e2e_tests_enhanced.py  run_integration_tests.py  run_unit_tests.py  test_config.py  test_config_migration.py  test_feature_migration.py  test_imports.py  test_integration_testing.py  test_models.py  test_simple_compatibility.py  test_storage.py  test_storage_migration.py
tools/: analyze_api_usage.py
ydf_logs/: ydf_20250713_131302_train.py  ydf_20250713_131430_learner.pkl  (+3 more)
(+1176 files in other folders)
